<resources>
    <string name="app_name" translatable="false">ACG player</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="play_status">Play Status</string>
    <string name="key_id_1" translatable="false">the_key_one</string>
    <string name="key_id_2" translatable="false">the_key_two</string>
    <string name="key_id_3" translatable="false">the_key_three</string>
    <string name="activity_music_detail_album_image" translatable="false">activity_music_detail_album_image</string>
    <string name="activity_music_detail_primary_background" translatable="false">activity_music_detail_primary_background</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="current_info_background" translatable="false">current_info_background</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="menu_button">Menu Button</string>
    <string name="random">random</string>
    <string name="repeat">repeat</string>
    <string name="color_picker">Color Picker</string>
    <string name="album">Album</string>
    <string name="music">Music</string>
    <string name="play_list">Play List</string>
    <string name="add_recent">Add Recent</string>
    <string name="my_favourite">My Favourite</string>
    <string name="image_trans_album" translatable="false">image trans album</string>
    <string name="color_accent">Color Accent</string>
    <string name="colorprimarydark">Color Primary Dark</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="fast_play">Fast Play</string>
    <string name="search">Search</string>
    <string name="app_color">App Color</string>
    <string name="color_primary">Color Primary</string>
    <string name="this_is_dark_color_like_status_bar">Change NavigationBar Color</string>
    <string name="style_settings">Style Settings</string>
    <string name="this_is_body_color_like_toolbar">This is body color like toolbar</string>
    <string name="the_accent_color_like_button">The accent color like button</string>
    <string name="licenses">Licenses</string>
    <string name="music_detail_background">Set MusicDetailBackground With Blur</string>
    <string name="set_background_color_or_image_with_blur">Set background auto-color or image with blur</string>
    <string name="tablayout_auto_color_accent" translatable="false">TabLayout Auto Color Accent</string>
    <string name="set_tablayout_with_music_cover_accent_color" translatable="false">Set TabLayout with music cover accent color</string>
    <string name="auto_night_mode">Night Mode</string>
    <string name="set_app_background_color_dark">Set app background color dark</string>
    <string name="title_activity_sets">Settings</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="next_play">Next Play</string>
    <string name="album_layout">Album Layout</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="_10_00" translatable="false">10:00</string>
    <string name="next_will_play">Next Will Play</string>
    <string name="love_music">Love</string>
    <string name="add_to_playlist">Add Play List</string>
    <string name="more_info">More Info</string>
    <string name="show_album">Show Album</string>
    <string name="del">Delete</string>
    <string name="shadow">Shadow</string>
    <string name="list_icon" translatable="false">list_icon</string>
    <string name="add_to_play_list">Add To Playlist</string>
    <string name="new_list">Create A New List</string>
    <string name="enter_name">Enter a name</string>
    <string name="cannot_empty">Cannot Empty</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="eq">EQ</string>
    <string name="tab_file">File Viewer</string>
    <string name="no_audio_ID" translatable="false">No Audio Id</string>
    <string name="no_equalizer">No EQ</string>
    <string name="title_activity_car_view" translatable="false">CarViewActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="car_mode">Car Mode</string>
    <string name="history">History</string>
    <string name="fav">Favourite</string>
    <string name="random_play">Shuffle Play</string>
    <string name="theme_image">Theme Image</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_as">Save As</string>
    <string name="theme">Theme</string>
    <string name="set_theme">Set Theme</string>
    <string name="reset">Reset</string>
    <string name="sure_int">Sure?</string>
    <string name="sure_set_def_theme_int">Set Default Theme (NONE) ?</string>
    <string name="other">Other</string>
    <string name="color_reset">Color Reset</string>
    <string name="theme_note">The installed themes are all from users, and any copyright infringement has nothing to do with the app developer. Please do not use copyrighted resources. Thanks</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="theme_use_note">Theme Use Note</string>
    <string name="note">Note</string>
    <string name="apply">Apply</string>
    <string name="theme_is_in_use">Theme is in use</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="remove_int">REMOVE?</string>
    <string name="sync">Sync</string>
    <string name="saved_to_doc">Saved to Documents!</string>
    <string name="color_noti">Colorized (for Android 7.0 up) </string>
    <string name="set_noti_background_colorized">Set Notification Background Colorized</string>
    <string name="reload">ReLoad</string>
    <string name="author">Author</string>
    <string name="thanks">Thanks</string>
    <string name="set_status_bar_translucent">Set status bar translucent</string>
    <string name="set_status_bar_translucent_no_black_square_mask">Set status bar translucent no black square mask</string>
    <string name="donate">Donate</string>
    <string name="update_log">Update Log</string>
    <string name="version">Version</string>
    <string name="share">Share</string>
    <string name="geek_aug" translatable="false">Geek_Aug</string>
    <string name="jiangsu" translatable="false">Jiangsu China</string>
    <string name="send_a_email">Send a E-Mail</string>
    <string name="open_blog">Open my blog</string>
    <string name="play">Play</string>
    <string name="x_has_been_set_as_ringtone" translatable="false">Set %1$s as your ringtone.</string>
    <string name="trash_can">Trash can</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="data_overview">Data overview</string>
    <string name="brief_information">Brief information</string>
    <string name="play_most_times">"Play most times: "</string>
    <string name="play_for_the_longest_time">"Play for the longest time: "</string>
    <string name="minimum_time_play">"Minimum time play: "</string>
    <string name="statistics">Statistics</string>
    <string name="total_plays">Total Plays:</string>
    <string name="total_playback_time">Total playback time:</string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="songs" translatable="false">Songs</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
    <string name="black_list">Black List</string>
    <string name="skip_the_directory_that_in_the_blacklist">Ignore audio in the blacklist directory</string>
    <string name="shortest_time">Ignore too short audio</string>
    <string name="skip_songs_that_are_less_than_the_minimum_duration">Skip songs that are less than the minimum duration: %1$d</string>
    <string name="filter">Filter</string>
    <string name="remove_frome_black_list">Remove from the blacklist</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="next_will_play_x">Next Will play %1$s</string>
    <string name="skip">Skip</string>
    <string name="already_exsits">Already Exists!</string>
    <string name="press_again_to_exit">Press again to exit!</string>
    <string name="tab_music">Music Tab</string>
    <string name="tab_album">Album Tab</string>
    <string name="tab_artist">Artist Tab</string>
    <string name="tab_playlist">Playlist Tab</string>
    <string name="tab_fileviewer">FileViewer Tab</string>
    <string name="close_the_tab_x_int">Close the tab %1$s ?</string>
    <string name="type_somthing">TYPE SOMETHING</string>
    <string name="transition_album_art" translatable="false">album_art_transition</string>
    <string name="detail_header_cover" translatable="false">Detail_Header_Cover</string>
    <string name="force_use_net_album">Force use Net-Album</string>
    <string name="drop_to_trash_can">Drop to trash can</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="set_title_color">Set title color</string>
    <string name="recyclerview_item_style">RecyclerView item style</string>
    <string name="set_recyclerview_item_style">Set recyclerView item style</string>
</resources>