<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
    <item
            android:id="@+id/menu_toolbar_theme_add"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/add"
            app:showAsAction="always"
            />

    <item
            android:id="@+id/menu_toolbar_theme_reset"
            android:icon="@drawable/ic_layers_clear_white_24dp"
            android:title="@string/reset"
            app:showAsAction="always"
            />

    <item
            android:id="@+id/menu_toolbar_theme_sync"
            android:icon="@drawable/ic_sync_white_24dp"
            android:title="@string/sync"
            app:showAsAction="ifRoom"
            />
    <item
            android:id="@+id/menu_toolbar_theme_load_def"
            android:title="@string/load_default_themes"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/menu_toolbar_theme_note"
            android:title="@string/note"
            />
</menu>