<?xml version="1.0" encoding="utf-8"?><!--
  ~ *************************************************************
  ~ 文件：navigation.xml  模块：app  项目：MusicPlayer
  ~ 当前修改时间：2019年01月05日 09:52:37
  ~ 上次修改时间：2019年01月05日 09:49:36
  ~ 作者：chenlongcould
  ~ Geek Studio
  ~ Copyright (c) 2019
  ~ *************************************************************
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
