<?xml version="1.0" encoding="utf-8"?><!--
  ~ *************************************************************
  ~ 文件：menu_toolbar.xml  模块：app  项目：MusicPlayer
  ~ 当前修改时间：2018年11月21日 11:01:53
  ~ 上次修改时间：2018年11月21日 11:01:44
  ~ 作者：chenlongcould
  ~ Geek Studio
  ~ Copyright (c) 2018
  ~ *************************************************************
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_toolbar_fast_play"
        android:icon="@drawable/ic_flash_on_white_24dp"
        android:title="@string/fast_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_toolbar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        android:iconTint="#fff"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_toolbar_exit"
        android:title="@string/exit" />
</menu>