<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:max="100"
            android:maxHeight="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_text"
            app:layout_constraintStart_toEndOf="@+id/left_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="30" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_remove_white_24dp"
                android:text="@string/_00_00"
                android:textColor="#fff"
                android:singleLine="true"
                android:ellipsize="middle"
                app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/seekBar" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/remove"
                android:src="@drawable/ic_add_white_24dp"
                android:text="@string/_10_00"
                android:textColor="#fff"
                android:singleLine="true"
                android:ellipsize="middle"
                app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/seekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>