<?xml version="1.0" encoding="utf-8"?><!--
  ~ *************************************************************
  ~ 文件：include_current_music_info.xml  模块：app  项目：MusicPlayer
  ~ 当前修改时间：2018年12月01日 11:07:06
  ~ 上次修改时间：2018年12月01日 10:27:32
  ~ 作者：chenlongcould
  ~ Geek Studio
  ~ Copyright (c) 2018
  ~ *************************************************************
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/current_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--<ImageView-->
    <!--android:id="@+id/info_bar_mask"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="8dp"-->
    <!--android:layout_marginBottom="70dp"-->
    <!--android:alpha="0.2"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:rotation="180"-->
    <!--android:src="@drawable/ramp_bg_dark"-->
    <!--app:layout_constraintBottom_toBottomOf="@+id/cardView_current_play_info" />-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/current_info_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/current_info_background"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/recycler_item_clover_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_audiotrack_24px"
                android:transitionName="@string/image_trans_album"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_item_clover_image"
                app:layout_constraintEnd_toStartOf="@+id/activity_main_info_bar_status_image"
                app:layout_constraintStart_toEndOf="@+id/recycler_item_clover_image"
                app:layout_constraintTop_toTopOf="@+id/recycler_item_clover_image">

                <TextView
                    android:id="@+id/activity_main_now_playing_album_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/album"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_main_now_playing_name" />

                <TextView
                    android:id="@+id/activity_main_now_playing_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/music"
                    android:textColor="#1e1e1e"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/activity_main_info_bar_status_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/play_status"
                android:focusable="true"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:tint="#636363"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>